botão de comprar adicionado

--- a/index.html
+++ b/index.html
@@ -59,18 +59,21 @@
                 <img src="./images/phone.jpg">
                 <h3>Celulares</h3>
                 <p>conecte-se às principais redes sociais com o que há de melhor no mercado mobile</p>
+                <a href="#" class="btn">Comprar</a>
             </div>
 
             <div class="box">
                 <img src="./images/pc.jpg">
                 <h3>PC Gamer</h3>
                 <p>Para os que desejam subir o seu elo na ranqueada</p>
+                <a href="#" class="btn">Comprar</a>
             </div>
 
             <div class="box">
                 <img src="./images/headset.jpg">
                 <h3>Headsets</h3>
                 <p>Para uma experiência imersiva e realista</p>
+                <a href="#" class="btn">Comprar</a>
             </div>
         </div>
     </section>
